package Structural.Facade.Classes;

public class Product {
    String productName = "Macbook";

    public String getProductName() {
        return productName;
    }

}
